# Taller-1-estructura-de-datos

./: CMakeLists.txt  Libro.cpp  Libro.h  MaterialBibliografico.cpp  MaterialBibliografico.h  README.md  Revista.cpp  Revista.h  Sistema.cpp  Sistema.h  Usuario.cpp  Usuario.h  biblioteca.txt  main.cpp  usuarios.txt
